# malaketh-layered

./: .gitignore  Cargo.toml  Makefile  ValidatorSetManager.sol  compose-reth3.yaml  compose.yaml
app/: Cargo.toml
app/src/: app.rs  app_config.rs  main.rs  node.rs  state.rs  store.rs
cli/src/: file.rs  new.rs
cli/src/cmd/: distributed_testnet.rs  init.rs  testnet.rs
engine/: Cargo.toml
engine/src/: auth.rs  engine.rs  engine_rpc.rs  ethereum_rpc.rs  lib.rs  validator_set_manager.rs
nodes_config_bin/0/config/: config.toml  eth_private_key.json  priv_validator_key.json
nodes_config_bin/1/config/: config.toml  eth_private_key.json  genesis.json  priv_validator_key.json
nodes_config_bin/2/config/: config.toml  eth_private_key.json  genesis.json  priv_validator_key.json
nodes_config_bin/3/config/: config.toml  eth_private_key.json  genesis.json  priv_validator_key.json
scripts/: spawn-new-peer.bash  spawn.bash
types/: Cargo.toml
types/src/: context.rs  genesis.rs  proposer_selector.rs  signing.rs  validator_set.rs  vote.rs
types/src/codec/json/: mod.rs  raw.rs
types/src/codec/proto/: mod.rs
utils/: Cargo.toml
utils/src/: genesis.rs  main.rs  pubkey.rs
