[workspace]
resolver = "2"

members = [
  "app",
  "cli",
  "engine",
  "utils",
  "types",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
readme       = "README.md"
repository   = "https://github.com/informalsystems/malaketh-layered"
license      = "Apache-2.0"
rust-version = "1.83"
publish      = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
malachitebft-eth-app    = { version = "0.0.1", path = "app" }
malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
malachitebft-eth-types  = { version = "0.0.1", path = "types" }

alloy-consensus        = { version = "0.11.1", default-features = false }
alloy-rpc-types        = { version = "0.11.1", features = ["eth"], default-features = false }
alloy-rpc-types-eth    = { version = "0.11.1", default-features = false }
alloy-rpc-types-engine = { version = "0.11.1", features = ["ssz"], default-features = false }
alloy-primitives       = { version = "0.8.15", features = ["getrandom"] }

async-trait        = "0.1.88"
axum               = "0.7"
bytes              = { version = "1", default-features = false }
bytesize           = "1.3"
clap               = "4.5"
ed25519-consensus  = "2.1.0"
eyre               = "0.6.12"
color-eyre         = "0.6"
config             = { version = "0.14", features = ["toml"], default-features = false }
derive-where       = "1.5.0"
directories        = "5.0.1"
hex                = { version = "0.4.3", features = ["serde"] }
humantime-serde    = "1.1.1"
itertools          = "0.14"
itf                = "0.2.3"
prost              = "0.13"
prost-build        = "0.13"
prost-types        = "0.13"
protox             = "0.8.0"
rand               = { version = "0.8.5", features = ["std_rng"] }
redb               = "2.4.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
sha3               = "0.10"
signature          = "2.2.0"
thiserror          = { version = "2.0", default-features = false }
tokio              = "1.46.1"
toml               = "0.8.23"
tracing            = "0.1.41"
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url                = "2"

[workspace.dependencies.malachitebft-app]
package = "informalsystems-malachitebft-app"
#path = "../malachite/code/crates/app"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-app-channel]
package = "informalsystems-malachitebft-app-channel"
#path = "../malachite/code/crates/app-channel"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-types]
package = "informalsystems-malachitebft-core-types"
#path = "../malachite/code/crates/core-types"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-consensus]
package = "informalsystems-malachitebft-core-consensus"
#path = "../malachite/code/crates/core-consensus"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-codec]
package = "informalsystems-malachitebft-codec"
#path = "../malachite/code/crates/codec"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-config]
package = "informalsystems-malachitebft-config"
#path = "../malachite/code/crates/config"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-metrics]
package = "informalsystems-malachitebft-metrics"
#path = "../malachite/code/crates/metrics"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-proto]
package = "informalsystems-malachitebft-proto"
#path = "../malachite/code/crates/proto"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-peer]
package = "informalsystems-malachitebft-peer"
#path = "../malachite/code/crates/peer"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"


[workspace.dependencies.malachitebft-signing-ed25519]
package = "informalsystems-malachitebft-signing-ed25519"
#path = "../malachite/code/crates/signing-ed25519"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-sync]
package = "informalsystems-malachitebft-sync"
#path = "../malachite/code/crates/sync"
rev = "v0.5.0"
git = "https://github.com/informalsystems/malachite.git"
