[package]
name = "malachitebft-eth-engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hex = "0.4"
base64 = "0.22"
rand ={ workspace = true }
color-eyre = { workspace = true }
jsonwebtoken = "9"
ethereum_serde_utils = "0.8"
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "stream", "rustls-tls", "native-tls-vendored"] }

malachitebft-eth-types = { workspace = true }
malachitebft-core-types = { workspace = true }
alloy-rpc-types         = { workspace = true }
alloy-rpc-types-engine  = { workspace = true }
alloy-rpc-types-txpool  = { version = "0.11.1" }
alloy-transport-http    = { version = "0.11.1", features = ["jwt-auth"] }
alloy-sol-types         = { version = "1.0.0-rc.1" }
